src/objects/StudentLicenseHistory__c.object
<CustomObject>
    <description>link student and license</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectDate__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>Date time this selection happens.</description>
        <label>Select Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>student link</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>StudentLicenseHistorys</relationshipLabel>
        <relationshipName>StudentLicenseHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUStateLicensure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link to the WGUStateLicensure</description>
        <label>WGU State Licensure</label>
        <referenceTo>WGUStateLicensure__c</referenceTo>
        <relationshipLabel>StudentLicenseHistorys</relationshipLabel>
        <relationshipName>StudentLicenseHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student License History</label>
    <nameField>
        <label>StudentLicense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentLicenseHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>